--- a/index.html
+++ b/index.html
@@ -1,39 +1,70 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Css Cheat Sheet</title>
-	<link rel="stylesheet" type="text/css"
-	 href="css/style.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Css Cheat Sheet</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="box-1">
+        <h1>Hello World</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt vut labore et dolore magna aliqua. Ut enim
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+		<div>
+			<a class="button" href="">Read more</a>
+		</div>  
+        </p>
+      </div>
+      <div class="box-2">
+        <h1>Goodbye World</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <div class="ui">
+			<h2>catagories</h2>
+      	 <ul>
+          <li><a href="#">catagory 1</a></li> 
+          <li><a href="#">catagory 2</a></li>
+          <li><a href="#">catagory 3</a></li>
+          <li><a href="#">catagory 4</a></li>
+          <li><a href="#">catagory 5</a></li>
+        </ul>
+      </div>
 
-</head>
-<body>
-	<div class="container">
-
-		<div class="box-1"> 
-			<h1>Hello World</h1>		
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt vut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</div>
-		<div class="box-2">
-
-			<h1>Goodbye World</h1>		
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-		</div>
-	</div>
-	
-			
-</body>
+		<form class="my-form"> 
+			<div>
+				<div class="form1">
+					<label>Email: </label>
+					<input type="text" name="Email" id="Email">
+				</div>
+				<div class="form1">
+					<label>Name: </label>
+					<input type="text" name="Name" id="">
+				</div>	
+				<div class="form1">
+					<label>Message</label>
+					<textarea name="message" id="" cols=20" rows="2"></textarea>
+				</div>								
+				<div class="form1">
+					<input class="button" type="submit">
+				</div>															
+			</div> <!--class form group ends-->
+		</form>
+	 </div><!-- .contaainer ends-->
+  </body>
 </html>
