--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Css Cheat Sheet</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="box-1">
-        <h1>Hello World</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt vut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-		<div>
-			<a class="button" href="">Read more</a>
-		</div>  
-        </p>
-      </div>
-      <div class="box-2">
-        <h1>Goodbye World</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-      </div>
-      <div class="ui">
-			<h2>catagories</h2>
-      	 <ul>
-          <li><a href="#">catagory 1</a></li> 
-          <li><a href="#">catagory 2</a></li>
-          <li><a href="#">catagory 3</a></li>
-          <li><a href="#">catagory 4</a></li>
-          <li><a href="#">catagory 5</a></li>
-        </ul>
-      </div>
 
-		<form class="my-form"> 
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>Css Cheat Sheet</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+
+<body>
+	<div class="container">
+		<div class="box-1">
+			<h1>Hello World</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+				eiusmod tempor incididunt vut labore et dolore magna aliqua. Ut enim
+				ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+				aliquip ex ea commodo consequat. Duis aute irure dolor in
+				reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+				pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+				culpa qui officia deserunt mollit anim id est laborum.
+			<div>
+				<a class="button" href="">Read more</a>
+			</div>
+			</p>
+		</div>
+		<div class="box-2">
+			<h1>Goodbye World</h1>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+				eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+				minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+				aliquip ex ea commodo consequat. Duis aute irure dolor in
+				reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+				pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+				culpa qui officia deserunt mollit anim id est laborum.
+			</p>
+		</div>
+		<div class="ui">
+			<h2>catagories</h2>
+			<ul>
+				<li><a href="#">catagory 1</a></li>
+				<li><a href="#">catagory 2</a></li>
+				<li><a href="#">catagory 3</a></li>
+				<li><a href="#">catagory 4</a></li>
+				<li><a href="#">catagory 5</a></li>
+			</ul>
+		</div>
+
+		<form class="my-form">
 			<div>
 				<div class="form1">
 					<label>Email: </label>
@@ -55,16 +57,63 @@
 				<div class="form1">
 					<label>Name: </label>
 					<input type="text" name="Name" id="">
-				</div>	
+				</div>
 				<div class="form1">
 					<label>Message</label>
 					<textarea name="message" id="" cols=20" rows="2"></textarea>
-				</div>								
+				</div>
 				<div class="form1">
 					<input class="button" type="submit">
-				</div>															
-			</div> <!--class form group ends-->
+				</div>
+			</div>
+			<!--class form group ends-->
 		</form>
-	 </div><!-- .contaainer ends-->
-  </body>
+		<div class="block">
+			<h3>heading</h3>
+			<p>Lorem ipsum dolor sit amet consectetur, 
+				adipisicing elit. Velit nostrum error natus quo</p>
+		</div>
+		<div class="block">
+			<h3>heading</h3>
+			<p>Lorem ipsum dolor sit amet consectetur, 
+				adipisicing elit. Velit nostrum error natus quo</p>
+		</div>		
+		<div class="block">
+			<h3>heading</h3>
+			<p>Lorem ipsum dolor sit amet consectetur, 
+				adipisicing elit. Velit nostrum error natus quo</p>
+		</div>		
+				<div class="clr">	
+
+				</div>
+
+				<div id="main-block">
+					<h3>heading</h3>
+					<p>Lorem ipsum dolor sit amet consectetur, 
+						adipisicing elit. Velit nostrum error natus quo</p>
+				</div> 
+
+				<div id="sidebar">
+					<p>Lorem ipsum dolor sit amet consectetur, 
+						adipisicing elit. Velit nostrum error natus quo</p>
+				</div>
+				<div class="clr"></div>
+				<div class="p-box">
+					<h1>Hello</h1>
+					<h2>goodbye</h2>
+				</div>
+				<ul class="my-list">
+					<li>List item</li>
+					<li>List item</li>
+					<li>List item</li>
+					<li>List item</li>
+					<li>List item</li>
+					<li>List item</li>
+					<li>List item</li>
+					<li>List item</li>
+				</ul>
+			</div><!-- .contaainer ends-->
+			<a class=" fix-me button" href="">button</a>
+</body>
+
 </html>
